@@ -15,12 +15,14 @@
 #
 # key = value # this is ignored
 
-# cache_mem [required]. Amount of memory to be used by squid 
-cache_mem = 100 
+# cache_mem [required]. Amount of memory to be used by squid (in MB)
+cache_mem = 128
 
+# maximum_object_size [required]. Maximum object size to be cached (in MB)
+maximum_object_size = 300
 
-# max_fd if this value set the maximum number of file descriptors wil be increased if needed at squid's start. If not set it will not be changed 
+# max_fd if this value set the maximum number of file descriptors wil be
+# increased if needed at squid's start. If not set it will not be changed.
 #max_fd= 167140
-
 
 group = proxy
